--- a/server/myproject/public_goods_simple/Contribute.html
+++ b/server/myproject/public_goods_simple/Contribute.html
@@ -16,7 +16,7 @@
 
     <script id="otree-data" type="application/json">
         {
-            "endowment": "{{ C.ENDOWMENT }}",
+            "endowment": {{ C.ENDOWMENT }},
             "multiplier": {{ C.MULTIPLIER }},
             "players": "{{ C.PLAYERS_PER_GROUP }}"
         }
